# indig_examensarbete

./: README.md
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: Detection.msg  EstimatedPose.msg  EstimatedPoses.msg  RobotInfo.msg
interfaces/srv/: ExecutePickSequence.srv  GetTcpPose.srv  MoveGripper.srv  MoveRobot.srv  TriggerPickSequence.srv
main_package/: package.xml  setup.py
main_package/launch/: project_launch.py
main_package/main_package/: main_node.py
motion_executor/: package.xml  setup.cfg  setup.py
motion_executor/launch/: motion_executor_launch.py
motion_executor/motion_executor/: config.py  motion_executor.py  motion_executor_node.py
pose_estimation/: package.xml  setup.py
pose_estimation/launch/: pose_estimation_launch.py
pose_estimation/pose_estimation/: config.py  keypoint_detector.py  pose_estimation_node.py  pose_estimator.py
pose_monitoring/: package.xml  setup.cfg  setup.py
pose_monitoring/launch/: pose_monitoring_launch.py
pose_monitoring/pose_monitoring/: config.py  feasibility_filter.py  feasibility_filter_node.py  pose_stability_tracker.py  pose_stability_tracker_node.py
resources/: package.xml  setup.py
resources/config/: config.yaml
robot_controller_py/: package.xml  setup.cfg  setup.py
robot_controller_py/launch/: robot_controller_launch.py
robot_controller_py/robot_controller_py/: config.py  controller.py  gripper.py  receiver.py
visualization/: package.xml  setup.py
visualization/launch/: visualization_launch.py
visualization/visualization/: config.py  visualization_node.py  visualizer.py
(+2 files in other folders)
