<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_controller_py</name>
  <version>0.0.0</version>
  <description>Nodes for controlling and retrieving data from robot and gripper</description>
  <maintainer email="hampus.h@live.se">hampus</maintainer>
  <license>Apache-2.0</license>

  <depend>os</depend>
  <depend>sys</depend>
  <depend>json</depend>
  <depend>rclpy</depend>
  <depend>interfaces</depend>
  <depend>functools</depend>
  <depend>rtde_receive</depend>
  <depend>rtde_controll</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
